<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/forUserC"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/defaut_UserC"
            app:layout_constraintBottom_toTopOf="@+id/forUserD"
            android:layout_marginBottom="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp"/>
    <TextView
            android:id="@+id/forUserD"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/defaut_UserU"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="304dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp"/>
    <TextView
            android:id="@+id/forUserA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/defaut_UserA"
            app:layout_constraintBottom_toTopOf="@+id/forUserB"
            android:layout_marginBottom="30dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp"/>
    <TextView
            android:id="@+id/forUserB"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:text="@string/defaut_UserB"
            app:layout_constraintBottom_toTopOf="@+id/forUserC"
            android:layout_marginBottom="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="43dp"/>
    <EditText
            android:id="@+id/bet"
            android:layout_width="105dp"
            android:layout_height="42dp"
            android:inputType="number"
            android:ems="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="120dp"
            android:text="@string/first_bet"
            android:autofillHints="no"
            tools:ignore="LabelFor"/>
    <Button
            android:text="@string/NEXT_ButtonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btClick"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.897"
            app:layout_constraintStart_toEndOf="@+id/bet" android:layout_marginStart="88dp"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="43dp"
                                          android:orientation="vertical"/>

</android.support.constraint.ConstraintLayout>
